Sat Mar 28 06:18:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (GETNAMEARG): remembers named arg is used, to get rid
	  of too many arguments warning.

Sat Mar 28 03:16:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command, cc_command, cpp_command): should no
	  override extout defined in extmk.rb.

Fri Mar 27 12:56:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (what_type?): checks more restrictively, and
	  supports universal binary.

Fri Mar 27 01:33:37 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_cmp): negate the result of reverse comparison.

Fri Mar 27 01:19:50 2009  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cmpint): FIX2INT may fail on LP64 platforms.

Thu Mar 26 12:22:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml/rubytypes.rb (String#is_binary_data?): TAB would be
	  usually considered to be included in text data.

	* lib/rdoc/parser.rb (RDoc::Parser.binary?): blksize may be nil
	  and is irrelevant to whether a file is binary.  copied from
	  above since TAB and newlines would be usually considered to be
	  included in text data.

Thu Mar 26 11:33:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/ri/paths.rb (RDoc::RI::Paths): considers
	  --program-prefix and --program-suffix.  reapplied r19923.

Wed Mar 25 07:45:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target_alias): replaces cpu with universal too.

	* configure.in (target): replaces cpu with arch by --with-arch.

	* mkconfig.rb (TOPDIR): chops arch in config instead of
	  RUBY_PLATFORM which varies on universal_binary.

	* mkconfig.rb (MAJOR, MINOR, TEENY): reads from version.h always.

Tue Mar 24 19:23:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): need to include $4.

Tue Mar 24 17:08:52 2009  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (rb_io_inspect): Cannot access fptr->fd if fptr is NULL.