@@ -273,4 +273,10 @@ class TestSprintf < Test::Unit::TestCase
     b2 = (/\.\./ =~ s2) != nil
     assert(b1 == b2, "[ruby-dev:33224]")
   end
+
+  def test_named
+    assert_equal("value", sprintf("%<key>s", :key => "value"))
+    assert_raise(ArgumentError) {sprintf("%1$<key2>s", :key => "value")}
+    assert_raise(ArgumentError) {sprintf("%<key><key2>s", :key => "value")}
+  end
 end
